src/comp.java
/* Generated By:JJTree&JavaCC: Do not edit this line. comp.java */
import java.util.ArrayList;
public class comp/*@bgen(jjtree)*/implements compTreeConstants, compConstants {/*@bgen(jjtree)*/
  protected static JJTcompState jjtree = new JJTcompState();static String recuperacion="";
   public static ArrayList<contenedor> contenedores= new ArrayList<contenedor>();
   static String tipo="";
   public static contenedor c;

   static  Token operador;
 static Token D1;
 static Token D2;
static int cambio=0;
  public static ArrayList<Token> acumular= new ArrayList<Token>();
static Boolean activo=false;
 static Boolean activoif=false;
 static Token asignar;
static Token asignar_id;


  public static ArrayList<Token> getAcumular() {
        return acumular;
}

public static void setAcumular(ArrayList<Token> acumular) {
        comp.acumular = acumular;
}


  public static ArrayList<contenedor> getContenedores() {
        return contenedores;
}

public static void setContenedores(ArrayList<contenedor> contenedores) {
        comp.contenedores = contenedores;
}


  public static String getRecuperacion()
  {
    return recuperacion;
  }

  public static void setRecuperacion(String recuperacion)
  {
    comp.recuperacion = recuperacion;
  }


 public static void error_skipto(int kind)
  {

    ParseException e = generateParseException(); // se genera el objeto excepción
    recuperacion= recuperacion.concat(e.toString()+"\u005cn");
    System.out.println(e.toString()); // se imprime el mensaje de error
    Token t;
    do
    {
      t = getNextToken();
       System.out.println("hola"+t);
    }
  while (t.kind != kind && t.kind==FINARCH);
  }

  public static void main(String args []) throws ParseException
  {

        try
        {
          System.out.println("Ingrese el c\u00f3digo a analizar:");
          comp analizador = new comp(System.in);
          SimpleNode variable= analizador.Programa();
          variable.dump("");
          System.out.println("Se ha compilado con \u00e9xito");
        }
        catch(ParseException e)
        {
          System.err.println("Se han encontrado errores");
          System.err.println(e.getMessage());

        }

  }



//semantico


//busca si ya esta el token
static public boolean verificarRepetido(Token token)
{
boolean encontro=false;

for(int i=0;i<contenedores.size();i++)
{
if(contenedores.get(i).getNombre().equals(token.image))
{
  encontro=true;
}

}

if(encontro==true)
{
recuperacion+="Error Semantico:  ya se encuentra declarada la variable: "+token.image+" En la Linea "+token.beginLine+",en la columna "+token.beginColumn+ "\u005cn";
return false;
}
else
return true;
}//

//verifica que este declarado
static public void verificardeclarado(Token token) {

boolean encontro=false;

for(int i=0;i<contenedores.size();i++)
{
if(contenedores.get(i).getNombre().equals(token.image))
{
  encontro=true;
}

}

if(encontro!=true)
{
recuperacion+="Error Semantico:  no se encuentra declarada la variable: "+token.image+" En la Linea "+token.beginLine+",en la columna "+token.beginColumn+ "\u005cn";
}
/*
else {

  if(!buscarTipo(token).equals("Cadena")) 
recuperacion+="Error Semantico:  no es tipo cadena encuentra declarada la variable: "+token.image+" En la Linea "+token.beginLine+",en la columna "+token.beginColumn+ "\n";

  }
*/




}//

//asigna el valor concuerda con el tipo
static void verificar_asignacion(Token a,Token b)
{

String dato1=" ",dato2="";

for(int i=0;i<contenedores.size();i++)
{
if(contenedores.get(i).getNombre().equals(a.image))
{
  dato1=buscar(a.image);
}

if(contenedores.get(i).getNombre().equals(b.image))
{
  dato2=buscar(b.image);
}

}

if(!dato1.equals(dato2)) {
recuperacion+="Error Semantico: no se  le puede asignar a esta variable: "+a.image+" no son del mismo tipo: "+" En la Linea "+a.beginLine+", en la columna "+a.beginColumn+ "\u005cn";
recuperacion+="Error Semantico: no se puede asignar: "+b.image+" En la Linea "+b.beginLine+" ,en la columna "+b.beginColumn+ "\u005cn";
}
else {

asignar(a.image);
  }





}//


//devuelve tipo
static String buscar(String identificador)
{
  String dato=" ";

for(int i=0;i<contenedores.size();i++)
{
if(contenedores.get(i).getNombre().equals(identificador))
{

dato=contenedores.get(i).getTipo();

}
}
return dato;

}//



//verifica que el token se encuentre
static void inicializada(Token t) {
boolean encontro=false;

for(int i=0;i<contenedores.size();i++)
{
if(contenedores.get(i).getNombre().equals(token.image))
{
  encontro=true;
}

}

if(encontro==false)
{

int intIndex = recuperacion.indexOf("Error Semantico:  no se encuentra declarada la variable: "+token.image+" En la Linea "+token.beginLine+",en la columna "+token.beginColumn+ "\u005cn");

if(intIndex==-1){

recuperacion+="Error Semantico:  no se encuentra declarada la variable: "+token.image+" En la Linea "+token.beginLine+",en la columna "+token.beginColumn+ "\u005cn";
}

}

/*
if(encontro==true) {
if(!buscar(t.image).equals("Cadena")) {
recuperacion+="Error Semantico: la variable debe de ser tipo cadena : "+t.image+" En la Linea "+t.beginLine+"en la columna "+t.beginColumn+ "\n";

  }
  

  }
*/


}//cierra funcion



//validar if
static void validar(Token a, Token b ,Token operador) {
String dato1=" ";
String dato2=" ";


for(int i=0;i<contenedores.size();i++)
{
if(contenedores.get(i).getNombre().equals(a.image))
{
  dato1=buscar(a.image);
}

if(contenedores.get(i).getNombre().equals(b.image))
{
  dato2=buscar(b.image);
}

}
if(a.image!=null&&b.image!=null)
{


if(!dato1.equals(dato2)) {
recuperacion+="Error Semantico:  no son del mismo tipo las variables: "+a.image+" , "+b.image  + " En la Linea "+a.beginLine+",en la columna "+a.beginColumn+ "\u005cn";
}

if("<=".equals(operador.image)||">=".equals(operador.image)||"<".equals(operador.image)||">".equals(operador.image) )
{
if(!dato1.equals("Numero"))
recuperacion+="Error Semantico:  no se puede operar una cadena con este operador "+operador.image +" \u005ct " +a.image+" En la Linea "+a.beginLine+",en la columna "+a.beginColumn+"\u005cn";

if(!dato2.equals("Numero"))
recuperacion+="Error Semantico:  no se puede operar una cadena con este operador "+operador.image +" \u005ct "+b.image+" En la Linea "+b.beginLine+",en la columna "+b.beginColumn+ "\u005cn";
}

}



}//cierra funcion



static void analizarAsignacion(Token a) {
 String tipo=buscar(a.image);
Boolean entrociclo=false;
   for(int i=1;i<acumular.size();i++)
   {
      if(!acumular.get(i).image.equals("+")&&!acumular.get(i).image.equals("-")&&!acumular.get(i).image.equals("*")&&!acumular.get(i).image.equals("/")&&!acumular.get(i).image.equals("]") ) {
             String tipo2=buscar(acumular.get(i).image);

             if(!tipo.equals(tipo2)&&validarDeclarado(acumular.get(i))==true) {
                        recuperacion+="Error Semantico: no se puede asignar esta variable "+acumular.get(i).image+" En la Linea "+acumular.get(i).beginLine+" en la columna "+acumular.get(i).beginColumn+" no es del mismo tipo: "+tipo2+" con la variaable:\u005ct "+a.image+"de tipo: " +tipo+ "\u005cn";
                        entrociclo=true;
                        }else
                        verificarAsignacion(acumular.get(i));
      }
    }

if(!entrociclo) {
asignar(a.image);
}

     }//


//se encarga de analizar si el token tiene una asignacion 
static void verificarAsignacion(Token a) {



for(int i=0;i<contenedores.size();i++)
{
if(contenedores.get(i).getNombre().equals(a.image))
{
  if(contenedores.get(i).getAsignacion()==false)
recuperacion+="Error Semantico: no se  encuentra inicializada la variable "+a.image+" En la Linea "+a.beginLine+" en la columna "+a.beginColumn+ "\u005cn";
}
}



}//


//si el dato esta bien se asigna el valor
static void asignar(String a) {

for(int i=0;i<contenedores.size();i++)
{
if(contenedores.get(i).getNombre().equals(a))
{
  contenedores.get(i).setAsignacion(true);
}
}



}//


static public boolean validarDeclarado(Token token)
{
boolean val=false;


for(int i=0;i<contenedores.size();i++)
{
if(contenedores.get(i).getNombre().equals(token.image))
{
return true;

}

}
return false;


}

  static final public SimpleNode Programa() throws ParseException {
 /*@bgen(jjtree) Programa */
  SimpleNode jjtn000 = new SimpleNode(JJTPROGRAMA);
  boolean jjtc000 = true;
  jjtree.openNodeScope(jjtn000);
    try {
      try {
        Sentencias();
        jj_consume_token(0);
       {if (true) return jjtn000;}
      } catch (ParseException e) {
   error_skipto(TERMINALDELINEA);
   {if (true) return jjtn000;}
      }
    } catch (Throwable jjte000) {
  if (jjtc000) {
    jjtree.clearNodeScope(jjtn000);
    jjtc000 = false;
  } else {
    jjtree.popNode();
  }
  if (jjte000 instanceof RuntimeException) {
    {if (true) throw (RuntimeException)jjte000;}
  }
  if (jjte000 instanceof ParseException) {
    {if (true) throw (ParseException)jjte000;}
  }
  {if (true) throw (Error)jjte000;}
    } finally {
  if (jjtc000) {
    jjtree.closeNodeScope(jjtn000, true);
  }
    }
    throw new Error("Missing return statement in function");
  }

  static final public void Sentencias() throws ParseException {
                    /*@bgen(jjtree) Sentencias */
                    SimpleNode jjtn000 = new SimpleNode(JJTSENTENCIAS);
                    boolean jjtc000 = true;
                    jjtree.openNodeScope(jjtn000);Token t;
    try {
      SimpleStm();
      switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
      case SI:
      case NUMERO:
      case CADENA:
      case ESCRIBIR:
      case ID:
        Sentencias();
        break;
      default:
        jj_la1[0] = jj_gen;
        ;
      }
    } catch (Throwable jjte000) {
    if (jjtc000) {
      jjtree.clearNodeScope(jjtn000);
      jjtc000 = false;
    } else {
      jjtree.popNode();
    }
    if (jjte000 instanceof RuntimeException) {
      {if (true) throw (RuntimeException)jjte000;}
    }
    if (jjte000 instanceof ParseException) {
      {if (true) throw (ParseException)jjte000;}
    }
    {if (true) throw (Error)jjte000;}
    } finally {
    if (jjtc000) {
      jjtree.closeNodeScope(jjtn000, true);
    }
    }
  }

  static final public void SimpleStm() throws ParseException {
                   /*@bgen(jjtree) SimpleStm */
  SimpleNode jjtn000 = new SimpleNode(JJTSIMPLESTM);
  boolean jjtc000 = true;
  jjtree.openNodeScope(jjtn000);
    try {
      try {
        switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
        case NUMERO:
        case CADENA:
          declaracion();
          break;
        case ESCRIBIR:
          escribir();
          break;
        case ID:
          asignacion();
          break;
        case SI:
          condicional();
          break;
        default:
          jj_la1[1] = jj_gen;
          jj_consume_token(-1);
          throw new ParseException();
        }
      } catch (ParseException e) {
   error_skipto(TERMINALDELINEA);
      }
    } catch (Throwable jjte000) {
    if (jjtc000) {
      jjtree.clearNodeScope(jjtn000);
      jjtc000 = false;
    } else {
      jjtree.popNode();
    }
    if (jjte000 instanceof RuntimeException) {
      {if (true) throw (RuntimeException)jjte000;}
    }
    if (jjte000 instanceof ParseException) {
      {if (true) throw (ParseException)jjte000;}
    }
    {if (true) throw (Error)jjte000;}
    } finally {
    if (jjtc000) {
      jjtree.closeNodeScope(jjtn000, true);
    }
    }
  }

  static final public void condicional() throws ParseException {
 /*@bgen(jjtree) condicional */
   SimpleNode jjtn000 = new SimpleNode(JJTCONDICIONAL);
   boolean jjtc000 = true;
   jjtree.openNodeScope(jjtn000);Token t; D1=new Token();D2=new Token();operador= new Token();cambio=0;activoif=true;
    try {
      t = jj_consume_token(SI);
               SimpleNode jjtn001 = new SimpleNode(JJTCONDICIONALSI);
               boolean jjtc001 = true;
               jjtree.openNodeScope(jjtn001);
      try {
               jjtree.closeNodeScope(jjtn001,  true);
               jjtc001 = false;
              jjtn001.value = t.image;
      } finally {
               if (jjtc001) {
                 jjtree.closeNodeScope(jjtn001,  true);
               }
      }
      dat();
      opcion();
      dat();
      t = jj_consume_token(ENTONCES);
                    SimpleNode jjtn002 = new SimpleNode(JJTCONDICIONALENTONCES);
                    boolean jjtc002 = true;
                    jjtree.openNodeScope(jjtn002);
      try {
                    jjtree.closeNodeScope(jjtn002,  true);
                    jjtc002 = false;
                   validar(D1,D2,operador);jjtn002.value = t.image;activoif=false;
      } finally {
                    if (jjtc002) {
                      jjtree.closeNodeScope(jjtn002,  true);
                    }
      }
      SimpleStm();
      switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
      case DELOCONTRARIO:
        t = jj_consume_token(DELOCONTRARIO);
                         SimpleNode jjtn003 = new SimpleNode(JJTCONDICIONALDELOCONTRARIO);
                         boolean jjtc003 = true;
                         jjtree.openNodeScope(jjtn003);
        try {
                         jjtree.closeNodeScope(jjtn003,  true);
                         jjtc003 = false;
                        jjtn003.value = t.image;
        } finally {
                         if (jjtc003) {
                           jjtree.closeNodeScope(jjtn003,  true);
                         }
        }
        Sentencias();
        break;
      default:
        jj_la1[2] = jj_gen;
        ;
      }
      t = jj_consume_token(FINSI);
                 SimpleNode jjtn004 = new SimpleNode(JJTCONDICIONALFINSI);
                 boolean jjtc004 = true;
                 jjtree.openNodeScope(jjtn004);
      try {
                 jjtree.closeNodeScope(jjtn004,  true);
                 jjtc004 = false;
                  jjtn004.value = t.image;
      } finally {
                 if (jjtc004) {
                   jjtree.closeNodeScope(jjtn004,  true);
                 }
      }
    } catch (Throwable jjte000) {
    if (jjtc000) {
      jjtree.clearNodeScope(jjtn000);
      jjtc000 = false;
    } else {
      jjtree.popNode();
    }
    if (jjte000 instanceof RuntimeException) {
      {if (true) throw (RuntimeException)jjte000;}
    }
    if (jjte000 instanceof ParseException) {
      {if (true) throw (ParseException)jjte000;}
    }
    {if (true) throw (Error)jjte000;}
    } finally {
    if (jjtc000) {
      jjtree.closeNodeScope(jjtn000, true);
    }
    }
  }

  static final public void dat() throws ParseException {
            /*@bgen(jjtree) dat */
            SimpleNode jjtn000 = new SimpleNode(JJTDAT);
            boolean jjtc000 = true;
            jjtree.openNodeScope(jjtn000);Token t;
    try {
      switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
      case ID:
        t = jj_consume_token(ID);
              SimpleNode jjtn001 = new SimpleNode(JJTIDENTIFICADOR);
              boolean jjtc001 = true;
              jjtree.openNodeScope(jjtn001);
        try {
              jjtree.closeNodeScope(jjtn001,  true);
              jjtc001 = false;
                 jjtn001.value = t.image;

        if(D1!=null) {
          cambio++;

                  if(D1.image==null&&cambio==1)
                        D1=t;

         if(D2.image==null&&cambio==2)
          D2=t;

      }
      //if(!activo)
                inicializada(t);

        if(activoif){
          System.out.println("entro"+t.image);
        verificarAsignacion(t);
    }
        } finally {
              if (jjtc001) {
                jjtree.closeNodeScope(jjtn001,  true);
              }
        }
        break;
      case NUMBER:
        t = jj_consume_token(NUMBER);
                SimpleNode jjtn002 = new SimpleNode(JJTNUMEROENTERO);
                boolean jjtc002 = true;
                jjtree.openNodeScope(jjtn002);
        try {
                jjtree.closeNodeScope(jjtn002,  true);
                jjtc002 = false;
                   jjtn002.value = t.image;
        } finally {
                if (jjtc002) {
                  jjtree.closeNodeScope(jjtn002,  true);
                }
        }
        break;
      default:
        jj_la1[3] = jj_gen;
        jj_consume_token(-1);
        throw new ParseException();
      }
    } finally {
    if (jjtc000) {
      jjtree.closeNodeScope(jjtn000, true);
    }
    }
  }
